[workspace]
resolver = "2"
members = [
    "crates/generator",
    "crates/shared",
    "crates/circuits/greco",
    "crates/crypto-params"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Gnosis Guild"]
license = "LGPL-3.0"
repository = "https://github.com/gnosisguild/zkfhe-toml-generator"
homepage = "https://github.com/gnosisguild/zkfhe-toml-generator"
readme = "README.md"
keywords = ["mathematics", "zero-knowledge-proof", "noir", "toml", "cryptography", "zkp"]
categories = ["mathematics", "cryptography", "science"]
rust-version = "1.86.0"

[workspace.dependencies]
greco = { package = "zkfhe-greco", path = "./crates/circuits/greco" }
generator = { package = "zkfhe-generator", path = "./crates/generator" }
shared = { package = "zkfhe-shared", path = "./crates/shared" }
crypto-params = { package = "zkfhe-crypto-params", path = "./crates/crypto-params" }

# needs cleanup from previous generator.
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
fhe = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-math = { git = "https://github.com/gnosisguild/fhe.rs.git" }
serde_json = "1.0.133"
rand = "0.8.5"
bigint-poly = { git = "https://github.com/gnosisguild/bigint-poly" }
num-bigint = "0.4.6"
num-traits = "0.2"
num-integer = "0.1"
ndarray = "0.16.1"
itertools = "0.14.0"
rayon = "1.10.0"
blake3 = "1.8.2"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }