[package]
name = "zkfhe-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared utilities and traits for zkFHE circuit parameters generation"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
fhe = { workspace = true }
fhe-math = { workspace = true }
fhe-traits = { workspace = true }
rand = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }