[package]
name = "zkfhe-greco"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Greco circuit parameter generation in Rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
shared = { package = "zkfhe-shared", path = "../../shared" }
bigint-poly = { workspace = true }
blake3 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
